Fix extra padding on content bottom on full screen page template. Fix comment area is taking full screen on full screen page template.

--- a/assets/src/scss/core/site/layout/_default.scss
+++ b/assets/src/scss/core/site/layout/_default.scss
@@ -41,6 +41,11 @@
 			display: none;
 		}
 	}
+
+	.hentry,
+	.entry-content {
+		margin-bottom: 0 !important;
+	}
 }
 
 @media screen and (min-width: $screen-sm) {
