--- a/assets/src/scss/gutenberg-blocks/_layout.scss
+++ b/assets/src/scss/gutenberg-blocks/_layout.scss
@@ -98,26 +98,4 @@
 			}
 		}
 	}
-
-	#comments.comments-area {
-		margin: 3.125rem 1rem;
-		max-width: 100%;
-
-		@include media(tablet-small) {
-			margin: 3.125rem auto;
-			max-width: $container-sm;
-		}
-
-		@include media(tablet) {
-			max-width: $container-md;
-		}
-
-		@include media(desktop) {
-			max-width: $container-lg;
-		}
-
-		@include media(wide) {
-			max-width: $container-xl;
-		}
-	}
 }
